# merge-dev

./: Cargo.toml  README.md
.github/workflows/: HRIS-test.yml  clippy.yml
merge-config/: Cargo.toml
merge-config/src/: configuration.rs
merge-hris/: Cargo.toml
merge-hris/src/: configuration.rs  lib.rs  models.rs
merge-hris/src/models/: bank.rs  bank_info.rs  benefits.rs
merge-proc-macros/: Cargo.toml
merge-proc-macros/src/: lib.rs
src/: hris.rs  lib.rs  macros.rs
