[package]
name = "merge-hris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merge-config = {path = "../merge-config"}
merge-proc-macros = {path = "../merge-proc-macros"}
reqwest = "0.11.12"
tokio = {version = "1.21.2", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_builder = "0.11.2"
mockito = "0.31.0"